@@ -1,5 +1,16 @@
 # DungeonMasters
 ## By: Jonathan Abrams, Madison Pope, Martha Emerson
+
+## Library Setup
+[JavaFX SDK](https://gluonhq.com/products/javafx/) content of `lib` directory for your platform into `lib/javafx`
+
+`--module-path lib/javafx --add-modules javafx.controls,javafx.fxml` into VM Options of run configuration in IDEA
+
+### Place these in root of project directory
+SQLiteDB Driver: https://github.com/xerial/sqlite-jdbc/releases/download/3.43.2.2/sqlite-jdbc-3.43.2.2.jar
+
+SQLite Logger: https://search.maven.org/remotecontent?filepath=org/slf4j/slf4j-api/1.7.36/slf4j-api-1.7.36.jar
+
 ## Iteration 1
 For this iteration, the team worked on setup up, review, and implementing the model class for our dungeon adventure project. Issues of note include time restrictions and communication. Going forward we plan on meeting every Tuesday and Thursday to touchbase and keep on track. Currently, we do not have any working software to show off. 
 
